[package]
name = "rfdups"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
crc32fast = "1.3.2"
crossterm = "0.23.1"
num-format = "0.4.0"

[features]
